--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.1
-yarn_mappings=1.18.1+build.22
-loader_version=0.13.3
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
+loader_version=0.15.7
 # Mod Properties
-mod_version=1.0
+mod_version=1.1+1.20.x
 maven_group=net.fabricmc.mante
 archives_base_name=untagged
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.46.6+1.18
+fabric_version=0.96.11+1.20.4
